src/objects/Cohort__c.object
<CustomObject>
    <fields>
        <fullName>Campus_Code__c</fullName>
        <description>Field from Banner to indicate the Campus; STVCHRT</description>
        <label>Campus Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Field from Banner to indicate the Capacity; STVCHRT</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Day__c</fullName>
        <description>Field from Banner to indicate the Class Day; STVCHRT</description>
        <label>Class Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cohort_Code__c</fullName>
        <description>Field from Banner to indicate the Cohort; STVCHRT</description>
        <externalId>true</externalId>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Cohort Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cohort_List_Pulled__c</fullName>
        <description>Field used with Enrollment Counselor when cohort is pulled for Registration</description>
        <label>Cohort List Pulled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <description>Field from Banner to indicate the Degree; STVCHRT</description>
        <label>Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OT</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <description>Field from Banner to indicate the Format; STVCHRT</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Face-to-Face (2 yr)</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face (3 yr)</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face Day</fullName>
                </value>
                <value>
                    <fullName>Face-to-Face Evenings</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>&lt;30% Online</fullName>
                </value>
                <value>
                    <fullName>30-49% Online</fullName>
                </value>
                <value>
                    <fullName>50-79% Online</fullName>
                </value>
                <value>
                    <fullName>&gt;80% Online with Intensive</fullName>
                </value>
                <value>
                    <fullName>80-99% Online</fullName>
                </value>
                <value>
                    <fullName>Online with Weekends</fullName>
                </value>
                <value>
                    <fullName>100% Online</fullName>
                </value>
                <value>
                    <fullName>Online with Intensive</fullName>
                </value>
                <value>
                    <fullName>Face-to-face</fullName>
                    <isActive>false</isActive>
                    <label>Face-to-face</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_code__c</fullName>
        <description>Field from Banner to indicate the Major; STVCHRT</description>
        <label>Major code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCT</fullName>
                </value>
                <value>
                    <fullName>ATLG</fullName>
                </value>
                <value>
                    <fullName>ATRG</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BUAG</fullName>
                </value>
                <value>
                    <fullName>BULA</fullName>
                </value>
                <value>
                    <fullName>BUSP</fullName>
                </value>
                <value>
                    <fullName>CADC</fullName>
                </value>
                <value>
                    <fullName>CAMH</fullName>
                </value>
                <value>
                    <fullName>CASD</fullName>
                </value>
                <value>
                    <fullName>CENV</fullName>
                </value>
                <value>
                    <fullName>CGER</fullName>
                </value>
                <value>
                    <fullName>CHMP</fullName>
                </value>
                <value>
                    <fullName>CHRM</fullName>
                </value>
                <value>
                    <fullName>CIBE</fullName>
                </value>
                <value>
                    <fullName>CITL</fullName>
                </value>
                <value>
                    <fullName>CLDC</fullName>
                </value>
                <value>
                    <fullName>CLDR</fullName>
                </value>
                <value>
                    <fullName>CNRE</fullName>
                </value>
                <value>
                    <fullName>COMG</fullName>
                </value>
                <value>
                    <fullName>COPG</fullName>
                </value>
                <value>
                    <fullName>COSP</fullName>
                </value>
                <value>
                    <fullName>COUG</fullName>
                </value>
                <value>
                    <fullName>CPLT</fullName>
                </value>
                <value>
                    <fullName>CPST</fullName>
                </value>
                <value>
                    <fullName>CSTM</fullName>
                </value>
                <value>
                    <fullName>EDAD</fullName>
                </value>
                <value>
                    <fullName>EDLD</fullName>
                </value>
                <value>
                    <fullName>EDUG</fullName>
                </value>
                <value>
                    <fullName>FINP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orientation_Day__c</fullName>
        <description>Field from Banner to indicate the Orientation date; STVCHRT</description>
        <label>Orientation Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Specifies a previous id if any</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <description>Field from Banner to indicate the Application Type; STVCHRT</description>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Field from Banner to indicate the Start Date; STVCHRT</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Enrollment__c</fullName>
        <description>Field from Banner to indicate the Target; STVCHRT</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Target Enrollment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from Banner to indicate the Term; STVCHRT</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campus_Code__c</columns>
        <columns>Cohort_Code__c</columns>
        <columns>Format__c</columns>
        <columns>Term__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/1/2019 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>